# face-recognition-attendance-marking-system

./: .gitignore  .pre-commit-config.yaml  API_SCREENSHOTS_GUIDE.md  APPENDIX.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETE_SUMMARY.md  COMPLETE_VS_CODE_REQUIREMENTS.md  DECEMBER_COMMITS_REPORT.md  DECEMBER_DELETION_TASK.md  DIAGRAMS_INDEX.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  FIGURES_CHECKLIST.md  FINAL_SUMMARY.md  FOLDER_STRUCTURE.md  HOW_TO_RUN_IN_VSCODE.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  LOADING_FIX_SUMMARY.md  Makefile  POSTMAN_SCREENSHOT_GUIDE.md  POSTMAN_TESTING.md  PROGRESS.md  PROJECT_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QUICK_START_VS_CODE.md  README.md  RUFF_ENHANCEMENT_REPORT.md  SCREENSHOT_INSTRUCTIONS.md  STRUCTURE.md  SUMMARY.md  TASK_COMPLETION.md  TASK_COMPLETION_SUMMARY.md  THESIS.md  THESIS_DIAGRAMS_SUMMARY.txt  THESIS_FIGURES_COMPLETE.md  THESIS_GENERATION_COMPLETE.md  TRAINING_METRICS_REFERENCE.md  TRAINING_METRICS_TABLES.md  (+24 more)
.github/workflows/: check-december-commits.yml  train-cnn.yml  train.yml
attendance_records/: attendance_2025-08-14.json  attendance_2025-12-26.json
cnn_models/: custom_face_model.keras  label_encoder.pkl  training_log.json
custom_embedding_models/: class_centroids.npy  custom_embedding_model.keras  label_encoder.pkl  training_log.json
docs/: COMPLIANCE_REPORT.md  ESP32_CAM_CONNECTION_FIX.md  ESP32_CAM_GUIDE.md  ESP32_IMPLEMENTATION_SUMMARY.md  ESP32_QUICK_START.md  ESP32_UI_GUIDE.md  ESP32_VERIFICATION_CHECKLIST.md  GUIDELINES.md  MODEL_TRAINING.md  PROGRESS.md  RCAICT_2025_Abstract.tex  RCAICT_2025_Extended_Abstract.tex  STRUCTURE.md  SUMMARY.md  TECHNICAL_OVERVIEW.md  compile.sh
embedding_models/: embedding_classifier.joblib  epoch_metrics.json  label_encoder.pkl  training_log.json  training_summary.json
embeddings/: face_embeddings.pkl
esp32-camera/: esp32-camera.ino
notebooks/: Labelled_Faces_in_the_Wild.ipynb
postman_screenshots/: README.md
scripts/: convert_confusion_matrices.py  copy_results_figures.py  edge_sync.sh  generate_classifier_diagrams.py  generate_model_comparison.py  generate_thesis_diagrams.py  generate_training_curves.py  resize_database_images.py  simulate_api_responses.py  test_api.sh
src/: attendance_system.py  cnn_trainer.py  config.py  custom_embedding_trainer.py  embedding_trainer.py  exceptions.py  face_manager.py  liveness_detector.py  web_app.py
static/: style.css
templates/: add_user.html  cnn_training.html  index.html  index_old.html
tests/: run_tests.py  test_attendance_system.py  test_auth.py  test_cnn_trainer.py  test_config.py  test_december_commits_deleted.py  test_face_manager.py  test_integration.py  test_ip_camera.py  test_liveness_detection.py
thesis_diagrams/: COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  FIGURES_INDEX.md  GENERATION_SUMMARY.md  INDEX.md  MAIN_INDEX.md  PHOTO_CAPTURE_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESULTS_DISCUSSION_FIGURES.md  VISUAL_SUMMARY.md
thesis_diagrams/embedding_classifier/: README.md
